--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,200 @@
-.App {
-  text-align: center;
+/* Login start */
+body{
+    margin: 0;
+    padding: 0;
+}
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.log-main{
+    height: 100vh;
+
+}
+.log-bg{
+    background-image: linear-gradient(45deg , rgba(0, 0, 0, 0.52) , rgba(0, 0, 0, 0.506)) , url('./Assets/gym.jpg');
+    background-repeat: no-repeat;
+    background-size:cover ;
+    background-position: center;
+    height: 100vh;
+}
+.log-form{
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.log-form form input{
+    width: 100%;
+    border: none;
+    border-bottom: 1.5px solid #111111;
+    margin: 2%;
+    padding: 1%;
+}
+.log-form form button{
+    width: 100%;
+    border: none;
+    border-bottom: 1.5px solid #111111;
+    margin: 2%;
+    padding: 1%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* NewLogin  */
+
+.newlog{
+    background-color: #2B2738;
+    height: 100vh;
+    
+}
+.log-newbg{
+    background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.535) , rgba(0, 0, 0, 0.663)), url('./Assets/sports.jpg');
+    height: 92vh;
+    background-repeat:no-repeat;
+    background-size: cover;
+    border-radius: 2%;
+}
+.log-forms form input{
+    border: none;
+    background-color: #3B364C;
+    padding: 1.5%;
+    margin: 1%;
+    width: 60%;
 }
 
-.App-link {
-  color: #61dafb;
+.sub-btn{
+    width: 60%;
+    background-color: #6E54B5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* sidenav */
+.side-main{
+    background-color: #FFFFFF;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    height: 100vh;
+    display: inline-flex;
+}
+
+.ant-layout-sider-trigger{
+    padding: 1%;
+    text-align: center;
+    background-color: #E6F4FF;
+    position: fixed;
+    bottom: 0;
+}
+
+/* topnav */
+.header.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionStatic.css-5iifl-MuiPaper-root-MuiAppBar-root{    background-color: #111111;
+    background: black;
+}
+.top-nav{
+    display: flex;
+    align-items: center;
+    padding: 1%;
+    background-color: #111111;
+    width: 100%;
+}
+.main-page{
+    width: 100%;
+    padding: 0% 2% 0% 2%;
+}
+.status{
+    color: #FFFFFF;
+    background-color: #111111;
+}
+.status div{
+    border-radius: 3%;
+    height: 120px;
+}
+.MuiToolbar-root.MuiToolbar-gutters.MuiToolbar-regular.css-95f9g5-MuiToolbar-root {
+    background: black;
+}
+.work{
+    margin-top: 5%;
+}
+.child2{
+    height: 280px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.AllMod{
+    margin: 4%;
+    border: 2px solid #c0c0c0;
+    padding: 1%;
+    width: 100%;
+    border-radius: 10px;
+}
+.add-clnt{
+    padding: 1%;
+}
+.add-clnt input{
+    margin-top: 2%;
+    border: none;
+    border-bottom: 1px solid #6d6d6d;
+    border-radius: 0px;
+}
+
+.user-profile img{
+    padding: 2%;
+    width: 100%;
+    border-radius: 10px;
+}
+.group-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 5%;
+}
+.group-btn Link button{
+    width: 45%;
+}
+
+/* Viewclient */
+
+.view-client{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+.sub-view{
+    height: 250px;
+    /* background-color: rgb(21, 0, 255); */
+    background-image: url('./Assets/client-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.sub-view2{
+    margin-top: 7%;
+    padding: 4%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
+.client-profile{
+    width: 30%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 6px;
+    background-color: #FFFFFF;
+    padding: 2%;
+    height: 70vh;
+    
+}
+.client-profile img{
+    width: 80%;
+    clip-path: circle();
+    
+}
+.client-options{
+    width: 70%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 6px;
+    background-color: #FFFFFF;
+    padding: 2%;
+    height: 70vh;
+    
 }
